Fix crash in QSPI::availablePorts() on OS X 10.10

CFTypeRef returned by IORegistryEntrySearchCFProperty sometimes may be
of unexpected type (as CFStringRef instead of CFNumberRef). In this case
the CFNumberGetValue() throws the exception.

The simplest fix is to check the type in searchShortIntProperty() before
calling CFNumberGetValue():

CFGetTypeID(result.as<CFNumberRef>()) == CFNumberGetTypeID().

Thanks to Orest Hera.

Task-number: QTBUG-46875
Change-Id: Id86993c008595f9762a08739bf4c5f5662643e92
Reviewed-by: Dyami Caliri <dyami@dragonframe.com>
Reviewed-by: Jake Petroules <jake.petroules@petroules.com>